[package]
name = "verity_zk_tests_zktls_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
verity-verify-local = { path = "../../../../rs/verify-local" }
verity-verify-tls = { path = "../../../../rs/verify-tls", default-features = false, features = [
  "no-session",
] }
serde = "1.0"
serde_json = "1.0"
