[package]
name = "verity-dp-examples-zktls-guest"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
risc0-zkvm = { workspace = true, default-features = false, features = ['std'] }
serde = { workspace = true }
serde_json = { workspace = true }
verity-verify-local = { workspace = true }
verity-verify-tls = { workspace = true }
