[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
verity-verify-private-transcript = { path = "../../../../rs/verify-private-transcript" }
bincode = "1.3.3"
serde_json = "1.0.137"
zk-bench-core = { path = "../core" }
